examples/test/testpolicy3739.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3739
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key14: value30
      key49: value30
      key25: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value1
          key2: value29
          key7: value12
      podSelector:
        matchLabels:
          key42: value39
          key43: value43
